tests/integration/snapshots/integration__conformance__i_string_utf-8_invalid_sequence.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 230, 151, 165, 209, 136, 250, 34, 93]
stdout ---

stderr ---
error: byte 0xFA would start a sequence of 5 or more bytes
 --> stdin:1:5
  |
1 | ["日ш�"]
  |      ^
